2006-05-29  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/par.R (igraph.par) : slightly different
	return values	
	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai)
	(layout.merge) : updated verbose argument
	* interfaces/R/igraph/R/package.R (.onLoad) : added default parameters
	* interfaces/R/igraph/R/print.R (print.igraph) : updated attribute
	printing, it is based on parameters now

2006-05-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/foreign.R (write.graph.lgl) : bug corrected
	* interfaces/R/igraph/R/foreign.R (write.graph) : lgl format added

	* interfaces/R/src/rinterface.c 
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr)
	(R_igraph_attribute_get_string_edge_attr) : handle vertex/edge seq

2006-05-27  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian) :
	added

2006-05-26  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	(print.igraph.es) : added

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
	indexing based on attributes a'le GUESS
	* interfaces/R/igraph/R/iterators.R (%--%, %->%, %<-%) : added

2006-05-25  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/foreign.R (write.graph.ncol, write.graph.lgl) :
	updated to new vertex and edge sequences
	* interfaces/R/src/rinterface.c (R_igraph_attribute_has_attr)
	(R_igraph_attribute_get_numeric_graph_attr)
	(R_igraph_attribute_get_string_graph_attr)
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr)
	(R_igraph_attribute_get_string_edge_attr) : NULL changed to R_NilValue,
	convert attributes to NUMERIC or CHARACTER
	(R_igraph_attributes_gettype) : added

2006-05-20  Gabor Csardi  <csardi@kzoo.edu>
